    + [BR] Check files for under a non-distributable Nvidia
      license.  (Closes: #724930)
    + [BR] Abstract sliding window algorithm and use it for
      license check.  (Closes: #720348)
  * checks/files.desc
    + [BR] Improve description of pkg-config-multi-arch-wrong-dir
      tag. Add debhelper > 9 on non multi-arched package as a likely
      cause (Closes: #723886).

  * data/binary/embedded-libs:
    + [RG] Detect embedded copies of poppler/xpdf.  (Closes: #724733)
  * data/fields/obsolete-packages:
    + [NT] Apply patch from Eric Dorland to mark various versions
      of automake as obsolete.
  * data/fields/virtual-packages:
    + [NT] Refresh against sid.  Thanks to Nicholas Breen for the
      reminder.  (Closes: #724866)
  * data/spelling/corrections:
    + [RG] Detect some typos of "establishment" and "contains."
  * data/standards-version/release-dates:
    + [NT] Add release date for 3.9.5.

  * debian/control:
    + [NT] Bump Standards-Versions to 3.9.5 - no changes required.

  * lib/Lintian/Check.pm:
    + [RG] Detect a few more spelling mistakes by removing some
      suffixes before looking them up in the list of spelling mistakes.
  * lib/Lintian/Collect/Package.pm:
    + [BR] Globally replace \\ by \ in _dequote_name(). This bug was
      masked by old buggy tar (Closes: #727665).

  * vendors/ubuntu/main/data/changes-file/known-dists:
    + [NT] Add "trusty".  Thanks to Stéphane Graber for the
      reminder.

 -- Niels Thykier <niels@thykier.net>  Thu, 26 Sep 2013 09:35:27 +0200

lintian (2.5.19) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - homepage-in-binary-package

  * checks/fields.{desc,pm}:
    + [NT] Add check for "Homepage"-field missing in the
      source, when one of the binary packages has the
      field.  Thanks to Ricardo Mones for the bug report.
      (Closes: #693117)
  * checks/files.pm:
    + [NT] Apply patch from Samuel Thibault to fix a