@@ -138,6 +138,29 @@ Info: The watch file specifies an upstream version number which matches
  upstream version.  Otherwise, DEHS and similar projects will think the
  package is out of date even when it may not be.
 
+Tag: debian-watch-may-check-gpg-signature
+Severity: pedantic
+Certainty: certain
+Ref: uscan(1)
+Info: This watch file does not include a means to verify the
+ the upstream tar using crytpographic signature.
+ .
+ If upstream distributions provide such signatures please
+ use the pgpsigurlmangle options in this watch file
+ opts= to generate the upstream URL of an GPG signature.
+ This signature is automatically downloaded and verified
+ against a keyring stored in debian/upstream-signing-key.pgp
+ .
+ Of course, not all upstream distributions provide such
+ signatures but you could try to request such signatures
+ from upstream and thus verifying that not a third party
+ modified the code after the release against the will
+ of upstream. We all know the phpmyadmin, unrealircd
+ or proftpd security bugs (only to mention some of
+ them). This would at least make it a lot harder for an
+ attacker to get such code to a wider audience through
+ distributions like Debian.
+
 Tag: debian-watch-contains-dh_make-template
 Severity: wishlist
 Certainty: certain
